--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,4 +1,5 @@
-%html
+!!!
+%html{ :xmlns => "http://www.w3.org/1999/xhtml", :lang => "en", 'xml:lang' => "en" }
   %head
     %title Go Get Me Some
   %body
