added examples and fixed display of multi-word subjects

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,1 +1,4 @@
-%p Instructions here
+%h1 Go Get Me Some Examples!
+%p <a href="http://go-get-me-so.me/chicken">http://go-get-me-so.me/chicken</a>
+%p <a href="http://go-get-me-so.me/pope">http://go-get-me-so.me/pope</a>
+%p <a href="http://go-get-me-so.me/chuck-norris-pants">http://go-get-me-so.me/chuck-norris-pants</a>
