tightened up the layout a bit

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,6 +2,5 @@
 %html{ :xmlns => "http://www.w3.org/1999/xhtml", :lang => "en", 'xml:lang' => "en" }
   %head
     %title Go Get Me Some
-  %body
-    %div{ :style => 'text-align: center; margin-top: 100px;'}
-      = yield
+  %body{ :style => 'text-align: center; padding-top: 100px;'}
+    = yield
