escaped url so it can accept spaces.  commented some things.

--- a/views/view.haml
+++ b/views/view.haml
@@ -5,4 +5,4 @@
 - unless @remote_image_src.nil? then
   %img{ :src => @remote_image_src, :style => 'max-height: 400px;'}
 - else
-  %p Hello
+  %p You fail at the internet
