created readme, updated source and removed some crap from the index view

--- a/views/index.haml
+++ b/views/index.haml
@@ -14,10 +14,7 @@
 %br
 %p 
   Powered by
-  %a{ :href => 'http://www.sinatrarb.com/'} Sinatra
-  
-/ %h1 Go Get Me Some Top 10!
-/ - @top_10.each do |topic|
-/   %p
-/     %a{ :href => topic.topic }<
-/       = topic.topic.capitalize.gsub(/\-+/, ' ')   
+  %a{ :href => 'http://www.sinatrarb.com/' } Sinatra
+%p
+  Source code at 
+  %a{ :href => 'http://github.com/ntodd/go-get-me-some/tree/master' } Github
