updated web 1.0 awesome footer

--- a/views/index.haml
+++ b/views/index.haml
@@ -13,8 +13,7 @@
 
 %br
 %p 
-  Powered by
+  By nTodd & Friends / Powered by
   %a{ :href => 'http://www.sinatrarb.com/' } Sinatra
-%p
-  Source code at 
+  \/ Source code at 
   %a{ :href => 'http://github.com/ntodd/go-get-me-some/tree/master' } Github
