updated web 1.0 awesome footer to escape &

--- a/views/index.haml
+++ b/views/index.haml
@@ -13,7 +13,7 @@
 
 %br
 %p 
-  By nTodd & Friends / Powered by
+  By nTodd &amp; Friends / Powered by
   %a{ :href => 'http://www.sinatrarb.com/' } Sinatra
   \/ Source code at 
   %a{ :href => 'http://github.com/ntodd/go-get-me-some/tree/master' } Github
