--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,4 +3,13 @@
   %head
     %title Go Get Me Some
   %body{ :style => 'text-align: center; padding-top: 100px;'}
-    = yield    
+    = yield
+    <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+    try {
+    var pageTracker = _gat._getTracker("UA-76866-8");
+    pageTracker._trackPageview();
+    } catch(err) {}</script>
