edited topics list

--- a/views/topics.haml
+++ b/views/topics.haml
@@ -1,3 +1,6 @@
+%h1 List All Topics
+%p 
+  %a{ :href => '/' } Go Home
 - @topics.each do |topic|
   %a{ :href => topic.topic }<
     = topic.topic.capitalize.gsub(/\-+/, ' ')
