hooked up list_topics to front page.  can't turn back now

--- a/views/index.haml
+++ b/views/index.haml
@@ -10,7 +10,9 @@
       = topic.topic.capitalize.gsub(/\-+/, ' ')
     \-
     = to_pretty(topic.timestamp)
-
+%br
+%p 
+  %a{ :href => '/list_topics' } Go Get Me Some Topics!
 %br
 %p 
   By nTodd &amp; Friends / Powered by
