Added links home and to a random entry on view page

--- a/views/view.haml
+++ b/views/view.haml
@@ -7,3 +7,6 @@
   %img{ :src => @remote_image, :style => 'max-height: 400px;'}
 - else
   %p You fail at the internet
+%p 
+  %a{ :href => "/"} ?
+  %a{ :href => "/#{@random_topic.topic}"} >
