--- a/views/index.haml
+++ b/views/index.haml
@@ -1,3 +1,5 @@
+%p 10,000 hits in 2 hours?  Apparently there is nothing on TV tonight...
+
 %h1 Go Get Me Some Examples!
 %p <a href="http://go-get-me-so.me/chicken">http://go-get-me-so.me/chicken</a>
 %p <a href="http://go-get-me-so.me/responsible-adults">http://go-get-me-so.me/responsible-adults</a>
