--- a/views/index.haml
+++ b/views/index.haml
@@ -17,7 +17,11 @@
   %a{ :href => '/list_topics' } Go Get Me Some Topics!
 %br
 %p 
-  By nTodd &amp; Friends / Powered by
+  By 
+  %a{ :href => 'http://twitter.com/wondersquirrel' } WonderSquirrel
+  &amp; 
+  %a{ :href => 'http://twitter.com/crossman' } Crossman
+  \/ Powered by
   %a{ :href => 'http://www.sinatrarb.com/' } Sinatra
   \/ Source code at 
   %a{ :href => 'http://github.com/ntodd/go-get-me-some/tree/master' } Github
