--- a/views/index.haml
+++ b/views/index.haml
@@ -1,9 +1,11 @@
-%p 10,000 hits in 2 hours?  Apparently there is nothing on TV tonight...
 
 %h1 Go Get Me Some Examples!
 %p <a href="http://go-get-me-so.me/chicken">go-get-me-so.me/chicken</a>
 %p <a href="http://go-get-me-so.me/responsible-adults">go-get-me-so.me/responsible-adults</a>
 %p <a href="http://go-get-me-so.me/internet-pants">go-get-me-so.me/internet-pants</a>
+%p 
+  %b New addition:  add a number after your topic to try other images
+%p <a href="http://go-get-me-so.me/chicken/2">go-get-me-so.me/chicken/2</a>
 
 %h1 Go Get Me Some Recent!
 - @recent_topics.each do |topic|
